attachKey_EC2/sg.tf
<<<<<<< HEAD
resource "aws_security_group" "sg" {
  name        = "demosg"
  description = "Security group for EC2 instance"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
      Name = "demosg"
    }
=======
resource "aws_security_group" "sg" {
  name        = "demosg"
  description = "Security group for EC2 instance"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
      Name = "demosg"
    }
>>>>>>> 174fc4f441b9d69be3b10ffc155ecac7476a74a5
}
